Adding responsiveness to the navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,14 @@
   width: 100%;
 }
 
+/* .nav-menu {
+  display: ;
+}
+
+@media screen and (ma) {
+  
+} */
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
