--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,12 @@
     )
     rgb(var(--background-start-rgb));
 } */
+/* LOGIN BACKGROUND IMAGE  */
+.bg {
+  background-image: url(../assets/img/background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
 .text-playfair {
   font-family: var(--font-playfair);
