--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,7 @@
   height: 2px;
   margin-top: 0px; /* Adjust spacing from text */
   transition: all 0.2s ease-in;
+  color: white;
 }
 
 .nav-item:hover::after {
@@ -60,6 +61,13 @@
 @media screen and (ma) {
   
 } */
+
+.newsletter {
+  background: url("./../assets/img/newsletter.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 @layer utilities {
   .text-balance {
