--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@
 } */
 /* LOGIN BACKGROUND IMAGE  */
 .bg {
-  background-image: url(../assets/img/background.png);
+  background-image: url(../assets/img/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -45,7 +45,8 @@
   display: block;
   width: 0%;
   height: 2px;
-  margin-top: 0px; /* Adjust spacing from text */
+  margin-top: 0px;
+  /* Adjust spacing from text */
   transition: all 0.2s ease-in;
   color: white;
 }
